Atualização na descrição das tarefas

--- a/projeto_llSeqV1/description
+++ b/projeto_llSeqV1/description
@@ -1,14 +1,14 @@
 ===== Tarefa #1: Classe LLSeq =====
 
-Esta tarefa é subdividada em 3 etapas:
+
 1 >> Implementar a classe LLSeq descrita por meio de seu arquivo llseq.h.
 2 >> Implementar as classes LLSeqReg e LLSeqOrd que extendem a classe LLSeq por meio de herança.
-A classe LLSeqReg armazena seus elementos em uma ordem qualquer no vetor interno. A classe
-LLSeqOrd matem seus elementos ordenados.
-3 >> Modificar as classes da versão 2 de maneira a suportar templates. A partir desta
-modificaçãoo cliente poderá passar o tipo da Chave e o tipo da Informação a ser armazenada
-na lista. Lembre que o método buscaAux deve sempre retornar o índice do elemento procurado OU o
-índice da posição onde o elemento procurado deveria estar para ajudar no processo de inserção.
+A classe LLSeqReg armazena seus elementos em uma ordem qualquer no vetor interno. A classe LLSeqOrd
+matem seus elementos ordenados.
+3 >> Modificar as classes da versão 2 de maneira a suportar templates. A partir desta modificação
+o cliente poderá passar o tipo da Chave e o tipo da Informação a ser armazenada na lista.
+Lembro que o método buscaAux deve sempre retornar o índice do elemento procurado OU o índice
+da posição onde o elemento procurado deveria estar para ajudar no processo de inserção.
 No caso da lista ordenada LLSeqOrd você deve imlementar a buscaAux como uma busca binária
 *modificada*  de maneira que tal busca retorna o índice do elemento procurado ou o índice da
 posição onde o item procurado deveria estar. Isso deve ser feito em O(log n)!
@@ -29,14 +29,14 @@ Errado: )( ou  ))(( ou (() ou ))), etc.
 3 >> Procure implementar a classe StackVec que no lugar de usar um vetor regular, utiliza a
 classe std::vector para armazenar os elementos da pilha. Este é um bom exercício para se
 acostumar com o uso da classe std::vector.
-O arquivo enviado com a tarefa corresponde a implementação da classe StackAr feita em sala
-de aula
+O arquivo enviado com a tarefa corresponde a implementação da classe StackAr feita em sala de
+aula.
 
 ===== Tarefa #3: Classe AbsQueue =====
 
 Sua tarefa consiste em implementar a classe QueueAr que concretiza a interface definida em
-AbsQueue.
-Para implementar a fila, utilize o armazenamento por vetor regular, alocado dinamicamnete no
-construtor e que cresce conforme a necessidade por meio de chamadas aa DoubleArray().
+ AbsQueue.
+Para implementar a fila, utilize o armazenamento por vetor regular, alocado dinamicamnete
+no construtor e que cresce conforme a necessidade por meio de chamadas aa DoubleArray().
 Faça também um programa de teste, driver_queue.cpp, para testar completamente a classe criada,
 em várias situações.
