Makefile para auxiliar na compilação

--- a/lista_encadeada/Makefile
+++ b/lista_encadeada/Makefile
@@ -1,7 +1,7 @@
-all: drive_ls_v1
+all: drive_les_v1
 
-drive: drive_les_v1.cpp les_v1.cpp
-	g++ -Wall -pedantic drive_les_v1.cpp les_v1.cpp -o drive_les_v1
+drive_les_v1: src/drive_les_v1.cpp src/les_v1.cpp
+	g++ -Wall -pedantic src/drive_les_v1.cpp src/les_v1.cpp -o drive_les_v1
 
 clean:
 	rm drive_les_v1
