Add some structure

--- a/elis/test/Makefile
+++ b/elis/test/Makefile
@@ -2,7 +2,7 @@ PROG = ../run_tests
 SRCS = $(wildcard *.cpp)
 LIBS = catch.h
 OBJS = $(patsubst %.cpp,%.o,$(SRCS))
-SRCOBJS = $(filter-out ../src/main.o, $(wildcard ../src/*.o))
+SRCOBJS = $(filter-out ../src/main.o, $(wildcard ../src/*.o)) $(wildcard */*.o)
 DEPFILES = $(patsubst %.cpp,%.d,$(SRCS))
 
 CC = g++
