--- a/elis/src/Makefile
+++ b/elis/src/Makefile
@@ -1,11 +1,11 @@
 PROG = ../elis
-SRCS = $(filter-out main.cpp, $(wildcard *.cpp))
+SRCS = $(filter-out main.cpp, $(wildcard *.cpp)) $(wildcard */*.cpp)
 HDRS = $(wildcard *.h)
 OBJS = $(patsubst %.cpp,%.o,$(SRCS))
 DEPFILES = $(patsubst %.cpp,%.d,$(SRCS))
 
 CC = g++
-CFLAGS = -Wall -g -O2 -I. -std=c++11 -lncurses
+CFLAGS = -Wall -g -O2 -I. -std=c++11
 
 
 all: $(PROG) $(OBJS)
@@ -19,7 +19,7 @@ $(OBJS): %.o: %.cpp $(SRCS) $(HDRS)
 	$(CC) -c $(CFLAGS) $< -o $@
 
 $(PROG): $(OBJS) main.cpp
-	$(CC) $(CFLAGS) $(OBJS) main.cpp -o $(PROG)
+	$(CC) $(CFLAGS) -lncurses $(OBJS) main.cpp -o $(PROG)
 
 clean:
 	rm -f $(OBJS) $(PROG)
